; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_bcast.c_tipc_bclink_check_gap.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_bcast.c_tipc_bclink_check_gap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tipc_node = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tipc_bclink_check_gap(%struct.tipc_node* %0, i64 %1) #0 {
  %3 = alloca %struct.tipc_node*, align 8
  %4 = alloca i64, align 8
  store %struct.tipc_node* %0, %struct.tipc_node** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.tipc_node*, %struct.tipc_node** %3, align 8
  %6 = getelementptr inbounds %struct.tipc_node, %struct.tipc_node* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 3
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %19

10:                                               ; preds = %2
  %11 = load i64, i64* %4, align 8
  %12 = load %struct.tipc_node*, %struct.tipc_node** %3, align 8
  %13 = getelementptr inbounds %struct.tipc_node, %struct.tipc_node* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 8
  %16 = call i32 @mod(i32 %15)
  %17 = call i64 @less_eq(i64 %11, i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %10, %2
  br label %40

20:                                               ; preds = %10
  %21 = load %struct.tipc_node*, %struct.tipc_node** %3, align 8
  %22 = call i32 @bclink_set_gap(%struct.tipc_node* %21)
  %23 = load %struct.tipc_node*, %struct.tipc_node** %3, align 8
  %24 = getelementptr inbounds %struct.tipc_node, %struct.tipc_node* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load %struct.tipc_node*, %struct.tipc_node** %3, align 8
  %28 = getelementptr inbounds %struct.tipc_node, %struct.tipc_node* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = icmp eq i64 %26, %30
  br i1 %31, label %32, label %37

32:                                               ; preds = %20
  %33 = load i64, i64* %4, align 8
  %34 = load %struct.tipc_node*, %struct.tipc_node** %3, align 8
  %35 = getelementptr inbounds %struct.tipc_node, %struct.tipc_node* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 1
  store i64 %33, i64* %36, align 8
  br label %37

37:                                               ; preds = %32, %20
  %38 = load %struct.tipc_node*, %struct.tipc_node** %3, align 8
  %39 = call i32 @bclink_send_nack(%struct.tipc_node* %38)
  br label %40

40:                                               ; preds = %37, %19
  ret void
}

declare dso_local i64 @less_eq(i64, i32) #1

declare dso_local i32 @mod(i32) #1

declare dso_local i32 @bclink_set_gap(%struct.tipc_node*) #1

declare dso_local i32 @bclink_send_nack(%struct.tipc_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
